--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "^2.16.0",
     "npm-check-updates": "^2.6.3",
     "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1"
   }
 }
