--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack-dev-server --config webpack-dev-server.config.js --progress --colors --host 0.0.0.0 --hot --inline"
   },
   "dependencies": {
+    "flowchart.js": "^1.6.2",
     "history": "^2.1.0",
     "material-ui": "^0.15.0-beta.2",
     "quagga": "^0.11.0",
