--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "request": "^2.72.0"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.4",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "lodash": "^4.11.1",
